--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="bg">
     <div class="container nav-section">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg">
           
             <a class="navbar-brand" href="#"><img src="ICON/Logo.png" alt="icon" srcset="" width="198px"></a>
           
@@ -59,6 +59,53 @@
 
     </div>
 </div>
+<!---------------------------nav-sevction-end---------------------------->
+
+<div class="container">
+       <div class="book-section">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+            <div class="col">
+               <div class="inside-div">
+                   <br/>
+                  <a><img src="ICON/book.png" alt="book" srcset="" width="100px" height="110px"></a>
+                  <br/> <br/>
+                  <h6>1500+ Topic</h6>
+                  <p>Learn Anythings</p>
+               </div>
+            </div>
+            <div class="col">
+              <div class="inside-div">
+                <br/>
+                  <a><img src="ICON/Students.png" alt="students" srcset="" width="100px"></a>
+                  <br/> <br/>
+                  <h6>1800+ Students</h6>
+                  <p>Learn Anythings</p>
+               </div>
+            </div>
+            <div class="col">
+              <div class="inside-div">
+                <br/>
+                  <a><img src="ICON/Test.png" alt="test" srcset="" width="100px"></a>
+                  <br/> <br/>
+                  <h6>9k+ Test Token</h6>
+                  <p>Learn Anythings</p>
+               </div>
+            </div>
+            <div class="col">
+              <div class="inside-div">
+                <br/>
+                  <a><img src="ICON/Student.png" alt="student" srcset="" width="100px"></a>
+                  <br/> <br/>
+                  <h6>2000+ student</h6>
+                  <p>Learn Anythings</p>
+               </div>
+            </div>
+          </div>
+       </div>
+</div>
+<!--------------------------------Book-section-end----------------------------->
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
