card-section-done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>e-school-website</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -104,6 +105,52 @@
        </div>
 </div>
 <!--------------------------------Book-section-end----------------------------->
+
+<div class="container">
+    <h2>Online Courses</h2>
+    <div class="card-section">
+        <div class="card-deck">
+            <div class="card">
+                    <img src="Photos/Morder pyschology.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Modern psychology</h5>
+                    <p class="card-text">Designatior</p>
+                    <a class="button">Buy Course</a>
+                  </div>
+                  <div class="card-footer d-flex justify-content-between">
+                    <p><i class="far fa-calendar-alt"></i> Start 20 Aril,2021</p><br/>
+                   <p><i class="fal fa-user-friends"> 60 seats</i></p>
+                  </div>
+              </div>
+            <div class="card">
+                <img src="Photos/Morder psyc.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Modern psychology</h5>
+                  <p class="card-text">Designatior</p>
+                  <a class="button">Buy Course</a>
+                </div>
+                <div class="card-footer d-flex justify-content-between">
+                  <p><i class="far fa-calendar-alt"></i> Start 20 Aril,2021</p><br/>
+                 <p><i class="fal fa-user-friends"> 60 seats</i></p>
+                </div>
+              </div>
+            <div class="card">
+              <img src="Photos/Morder pychons.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Modern psychology</h5>
+                <p class="card-text">Designatior</p>
+                <a class="button">Buy Course</a>
+              </div>
+              <div class="card-footer d-flex justify-content-between">
+                <p><i class="far fa-calendar-alt"></i> Start 20 Aril,2021</p><br/>
+               <p><i class="fal fa-user-friends"> 60 seats</i></p>
+              </div>
+            </div>
+          </div>
+        </div>
+</div>
+<!-------------------------Card-section-end---------------------->
+
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
