testimonial-section-done

--- a/index.html
+++ b/index.html
@@ -150,7 +150,24 @@
         </div>
 </div>
 <!-------------------------Card-section-end---------------------->
+<div class="container">
+    <h2>Testimonial</h2>
+    <div class="testimonial-section">
+        <div class="row">
+            <div class="col-4">
+                <img src="Photos/Man.png" alt="" srcset="">
+            </div>
+         <div class="col-8 d-flex align-items-center">       
+        <p>There are many variations of passages of Lorem Ipsum available, but the
+            majority have suffered alteration in some form, by injected humour, 
+           or randomised words which don't look even slightly believable.
+        </p>
+        </div>
+     </div>      
+  </div>
+</div>
 
+<!----------------------Testimonial-section-end------------------>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
