--- a/index.html
+++ b/index.html
@@ -170,6 +170,47 @@
 <!----------------------Testimonial-section-end------------------>
 
 
+  <footer>
+    <div class="container footer-section">
+      <div class="row">
+        <div class="col-4 justify-content-around align-items-center">
+          <p>Millions of people of all ages and from around
+            the world are improving their lives with us</p>
+        </div>
+        <div class="col-8 d-flex justify-content-around align-items-center">
+          <div class="box">
+            <a class="bold">Course</a><br/>
+            <a>Graphic Design</a><br/>
+            <a>Web Design</a><br/>
+            <a>Business</a><br/>
+            <a>Marketing</a><br/>
+            <a>Engineering</a><br/>
+          </div>
+          <div class="box">
+            <a class="bold">Terms</a><br/>
+            <a>Graphic Design</a><br/>
+            <a>Web Design</a><br/>
+            <a>Business</a><br/>
+            <a>Marketing</a><br/>
+            <a>Engineering</a><br/>
+          </div>
+          <div class="box">
+            <a class="bold">Useful Link</a><br/>
+            <a>Graphic Design</a><br/>
+            <a>Web Design</a><br/>
+            <a>Business</a><br/>
+            <a>Marketing</a><br/>
+            <a>Engineering</a><br/>
+          </div>
+        </div>
+      </div>
+    </div>
+<p>Copyright © 2020 Tapu.com</p>
+  </footer>
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
