doesn't responsive yet

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </nav>
         <div class="row">
-            <div class="col">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
               <div class="left-side">
                 <p class="learn-color">Are you ready to Learn?</p>
               
@@ -53,7 +53,7 @@
               </div>
            
             </div>
-            <div class="col">
+            <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
              <img src="Photos/Illustration.png" alt="illustration" srcset="" width="100%">
             </div>
           </div>
@@ -65,7 +65,7 @@
 <div class="container">
        <div class="book-section">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
-            <div class="col">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
                <div class="inside-div">
                    <br/>
                   <a><img src="ICON/book.png" alt="book" srcset="" width="100px" height="110px"></a>
@@ -74,7 +74,7 @@
                   <p>Learn Anythings</p>
                </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
               <div class="inside-div">
                 <br/>
                   <a><img src="ICON/Students.png" alt="students" srcset="" width="100px"></a>
@@ -83,7 +83,7 @@
                   <p>Learn Anythings</p>
                </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
               <div class="inside-div">
                 <br/>
                   <a><img src="ICON/Test.png" alt="test" srcset="" width="100px"></a>
@@ -92,7 +92,7 @@
                   <p>Learn Anythings</p>
                </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
               <div class="inside-div">
                 <br/>
                   <a><img src="ICON/Student.png" alt="student" srcset="" width="100px"></a>
@@ -107,10 +107,10 @@
 <!--------------------------------Book-section-end----------------------------->
 
 <div class="container">
-    <h2>Online Courses</h2>
+    <h2 class="text-center">Online Courses</h2>
     <div class="card-section">
         <div class="card-deck">
-            <div class="card">
+            <div class="card col-12 col-sm-10 col-md-6 col-lg-4 col-xl-4">
                     <img src="Photos/Morder pyschology.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Modern psychology</h5>
@@ -122,7 +122,7 @@
                    <p><i class="fal fa-user-friends"> 60 seats</i></p>
                   </div>
               </div>
-            <div class="card">
+            <div class="card col-12 col-sm-10 col-md-6 col-lg-4 col-xl-4">
                 <img src="Photos/Morder psyc.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Modern psychology</h5>
@@ -134,7 +134,7 @@
                  <p><i class="fal fa-user-friends"> 60 seats</i></p>
                 </div>
               </div>
-            <div class="card">
+            <div class="card col-12 col-sm-10 col-md-6 col-lg-4 col-xl-4">
               <img src="Photos/Morder pychons.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Modern psychology</h5>
@@ -151,10 +151,10 @@
 </div>
 <!-------------------------Card-section-end---------------------->
 <div class="container">
-    <h2>Testimonial</h2>
+    <h2 class="text-center">Testimonial</h2>
     <div class="testimonial-section">
         <div class="row">
-            <div class="col-4">
+            <div class="col-4 ">
                 <img src="Photos/Man.png" alt="" srcset="">
             </div>
          <div class="col-8 d-flex align-items-center">       
@@ -173,11 +173,11 @@
   <footer>
     <div class="container footer-section">
       <div class="row">
-        <div class="col-4 justify-content-around align-items-center">
+        <div class=" d-flex   col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
           <p>Millions of people of all ages and from around
             the world are improving their lives with us</p>
         </div>
-        <div class="col-8 d-flex justify-content-around align-items-center">
+        <div class=" d-flex justify-content-around align-items-center col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
           <div class="box">
             <a class="bold">Course</a><br/>
             <a>Graphic Design</a><br/>
@@ -205,7 +205,7 @@
         </div>
       </div>
     </div>
-<p>Copyright © 2020 Tapu.com</p>
+<p class="text-center text-color">Copyright © 2020 Tapu Chandra Mojumder</p>
   </footer>
 
 
